[GR-73222] Fix exact reflection compatibility